# cometa

./: .cursorrules  .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-K8-Commands.md  README-K8-Instructions.md  README.md  SECURITY.md  backup-k8-cometa-volume-claim.yaml  bkp_docker-compose-v2.yml  cometa-cleanup-docker.sh  cometa.sh  docker-compose-build.yml  docker-compose-db.yml  docker-compose-debug.yml  docker-compose-dev.yml  docker-compose-front.yml  docker-compose-healenium.yml  docker-compose-selenoid-new.yml  docker-compose-selenoid.yml  docker-compose-test.yml  docker-compose-v2.yml  docker-compose-wip.yml  docker-compose.yml  docker-compose_ai.yml  docker-compose_monitoring.yml  init_dirs.sh  k8-behave-pod.yaml  k8-cometa-src-volume-claim.yaml  k8-cometa-src-volume.yaml  k8-cometa-volume-with-claim.yaml  k8-crontab-deployment.yaml  k8-db-volume-claim.yaml  k8-django-pod.yaml  k8-django-service.yaml  k8-front-pod.yaml  k8-front-service.yaml  k8-novnc-deployment.yaml  (+14 more)
.hooks/: pre-commit  (+1 more)
backend/behave/: .cursorrules  .dockerignore  .gitignore  Dockerfile  Dockerfile_dev_exp  README.md  download_tracking_chrome_edge.py  download_tracking_firefox.py  entry.sh  pyproject.toml  run_remote_from_django.sh  supervisord.conf  version.json
backend/behave/.cursor/: rules
backend/behave/behave_django/: db.sqlite3  entry.sh  manage.py  start_pod.sh
backend/behave/behave_django/behave_django/: settings.py  urls.py  wsgi.py
backend/behave/behave_django/modules/: ai.py
backend/behave/behave_django/schedules/: apps.py  forms.py  views.py
backend/behave/behave_django/utility/: cometa_logger.py  common.py  config_handler.py  configurations.py  connections.py  encryption.py  functions.py
backend/behave/brower_use_dev/: browser_use_test.py  browser_use_test2.py
backend/behave/cometa_itself/: amvara_theme.css  driver_manager.py  environment.py  healenium_client.py  kubernetes_handler.py  telegram_notifications.py
backend/behave/cometa_itself/steps/: actions.py  unimplemented_steps.py  validation_actions.py
backend/behave/db_tests/: common.py  connection_with_connection_query.py  connections_with_params.py  database_tests.py  mssql.readme.md  mssql_connection.py  mysql_tests.py  nosql_database_tests.py  nosql_tests.py  sql_database_tests.py  sql_tests.py
backend/behave/db_tests_old/: connection_with_connection_query.py  connections_with_params.py
backend/behave/db_tests_old/dummy_data/: db2_inits.sql
backend/behave/ee/cometa_itself/: healenium_client.py
backend/behave/uploads/: dummy.docx  dummy.mp4.REMOVED.git-id  dummy.txt  dummy.xlsx
backend/src/: .dockerignore  .gitignore  Dockerfile  createIndexes.sql  create_populate_function.sql  create_superuser.sh  delete_telegram_sessions.py  django_migrate.sh  gunicorn.conf.py  inserActions.sh  install-dependecies.sh  manage.py  populate_database.sh  populate_database.sql  project.code-workspace  pyproject.toml  restart_dev_server.sh  run_cometa.sh  sample_readme.md  service_manager.py  sql.txt  start.sh  start_backup.sh  start_common.sh  start_pod.sh  temp_script.sh  test_rag_availability.py  test_rag_readme.py  update_telegram_webhook.py  version.json  wait-for-postgres.sh
backend/src/.cursor/: rules
backend/src/backend/: admin.py  ai_chat.py  common.py  feature-runs.py  generatePDF.py  metrics.py  middleware.py  mixins.py  models.py  paginations.py  payments.py  serializers.py  telegram_auth.py  telegram_oauth_middleware.py  test.py  urls.py  view_common.py  views.py  views_ee.py
backend/src/backend/ee/: LICENSE
backend/src/backend/middlewares/: authentication.py
backend/src/cometa_pj/: settings.py  urls.py  wsgi.py
backend/src/command_log/: __init__.py  admin.py  apps.py  commands.py  models.py
backend/src/data_analysis/: Readme.md  StepResultAnalysis-Copy1.ipynb
backend/src/defaults/: applications.json  authentication_provider.json  browsers.json  clouds.json  cometa_browsers.json  configurationfile.json  departments.json  environments.json  kubernetes_browsers.json  mobiles.json  permissions.json  schedules.json  subscriptions.json  superusers.json  vulnerable_headers.json
backend/src/healenium/: apps.py  serializers.py  services.py  urls.py  views.py
backend/src/housekeeping/: admin.py  apps.py  house_keeping.py  models.py  serializers.py  views.py
backend/src/initiate/: initiate_setups.py
backend/src/modules/: urls.py
backend/src/rsyslog/: rsyslog.conf  rsyslog.service
backend/src/templates/: telegram_auth_error.html  telegram_auth_redirect.html  telegram_auth_success.html  telegram_oauth_complete.html
(+1424 files in other folders)
