[tool.poetry]
name = "behave"
version = "0.1.0"
description = ""
authors = ["AMVARA CONSULTING <info@amvara.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
arrow = "^1.1.0"
html-diff = "^0.3.0"
tqdm = "^4.60.0"
six = "^1.16.0"
python-crontab = "^2.5.1"
pycryptodome = "^3.10.1"
awesome-slugify = "^1.6.5"
sentry-sdk = "^1.1.0"
Pillow = "^8.2.0"
simplejson = "^3.17.2"
selenium = "^3.141.0"
requests = "^2.25.1"
python-dateutil = "^2.8.1"
pydash = "^5.0.0"
psycopg2 = "^2.8.6"
psycopg2-binary = "^2.8.6"
parse-type = "^0.5.2"
parse = "^1.19.0"
fake-factory = "^9999.9.9"
djangorestframework = "^3.12.4"
django-filter = "^2.4.0"
Django = "^3.2.3"
coreapi = "^2.3.3"
gunicorn = "^20.1.0"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
