[tool.poetry]
name = "cometa_behave"
version = "0.1.0"
description = ""
authors = ["AMVARA CONSULTING <info@amvara.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
arrow = "^1.2.3"
html-diff = "^0.3.0"
tqdm = "^4.65.0"
six = "^1.16.0"
python-crontab = "^2.7.1"
pycryptodome = "^3.18.0"
awesome-slugify = "^1.6.5"
sentry-sdk = "^1.28.1"
Pillow = "^10.0.0"
simplejson = "^3.19.1"
selenium = "^4.16.0"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
pydash = "^7.0.7"
psycopg2 = "^2.9.6"
psycopg2-binary = "^2.9.6"
parse-type = "^0.5.2"
parse = "^1.19.1"
fake-factory = "^9999.9.9"
djangorestframework = "^3.14.0"
django-filter = "^2.4.0"
Django = "^3.2.20"
coreapi = "^2.3.3"
gunicorn = "^20.1.0"
openpyxl = "^3.1.2"
pandas = "^1.5.3"
pyotp = "^2.8.0"
redis = "^5.0.0"
django-rq = "^2.8.1"
jq = "^1.6.0"
behave = "^1.2.6"
bs4 = "^0.0.2"
pypdf = "3.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
