[tool.poetry]
name = "cometa"
version = "2.5.54"
description = ""
authors = ["AMVARA CONSULTING <info@amvara.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
Django = "^3.2.20"
psycopg2 = "^2.9.6"
psycopg2-binary = "^2.9.6"
djangorestframework = "^3.14.0"
tqdm = "^4.65.0"
django-filter = "^2.4.0"
coreapi = "^2.3.3"
requests = "~2.25.1"
django-cors-headers = "^3.14.0"
awesome-slugify = "^1.6.5"
bcrypt = "^3.2.2"
xhtml2pdf = "^0.2.11"
pycryptodome = "^3.18.0"
sentry-sdk = "^1.28.1"
Pillow = "^9.5.0"
stripe = "^2.76.0"
Pygments = "^2.15.1"
python-crontab = "^2.7.1"
gunicorn = "^20.1.0"
python-magic = "^0.4.27"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
odfpy = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
